// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Token> Anchor story renders snapshot 1`] = `
<a
  className="rbt-token"
  href="#"
>
  <div
    className="rbt-token-label"
  >
    This is a link token
  </div>
</a>
`;

exports[`<Token> Disabled story renders snapshot 1`] = `
<div
  className="rbt-token rbt-token-disabled"
>
  <div
    className="rbt-token-label"
  >
    This is a disabled token
  </div>
</div>
`;

exports[`<Token> Interactive story renders snapshot 1`] = `
<div
  className="rbt-token rbt-token-removeable"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="rbt-token-label"
  >
    This is an interactive token
  </div>
  <button
    aria-label="Remove"
    className="close btn-close rbt-close rbt-token-remove-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      aria-hidden="true"
      className="rbt-close-content"
    >
      ×
    </span>
    <span
      className="sr-only visually-hidden"
    >
      Remove
    </span>
  </button>
</div>
`;

exports[`<Token> Static story renders snapshot 1`] = `
<div
  className="rbt-token"
>
  <div
    className="rbt-token-label"
  >
    This is a static token
  </div>
</div>
`;
